# Turing2

./: README.md  Turing2.cabal  TuringChurch.cabal  main.hs
examples/: cp.turing
src/: main.hs  parse.hs  types.hs
