name:                TuringChurch
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Matt Neary
maintainer:          neary.matt@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable TuringChurch
  main-is:             main.hs
  build-depends:       base >=4.8 && <4.9,
                       parsec == 3.1.9
  hs-source-dirs:      src
  default-language:    Haskell2010
